# clmake

./: .gitmodules  CMakeLists.txt
lib/: application.cpp  application.hpp
src/: main.cpp
